--- a/src/app/admin/datasets/datasets.component.html
+++ b/src/app/admin/datasets/datasets.component.html
@@ -101,7 +101,7 @@
 </nz-card>
 
 <nz-dropdown-menu #actions="nzDropdownMenu">
-  <ul *ngIf="activated as v" nz-menu>
+  <ul *ngIf="actived as v" nz-menu>
     <li nz-menu-item nzDisabled>
       <b>{{ v.name }}</b>
     </li>
