--- a/src/app/audit/operates/operates.component.html
+++ b/src/app/audit/operates/operates.component.html
@@ -80,7 +80,7 @@
       <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
       <nz-dropdown-menu #menu="nzDropdownMenu">
         <ul nz-menu>
-          <li nz-menu-item (click)="basicTable.clearSelections()"> 取消选择 </li>
+          <li nz-menu-item (click)="wpxTable.clearSelections()"> 取消选择 </li>
         </ul>
         <ul nz-menu>
           <li nz-menu-item> 导出 </li>
@@ -92,7 +92,7 @@
 </ng-template>
 
 <wpx-table
-  #basicTable
+  #wpxTable
   [wpxTitle]="titleRef"
   [wpxExtra]="extraRef"
   [wpxModel]="model"
