--- a/src/app/admin/workflows/controls/controls.component.html
+++ b/src/app/admin/workflows/controls/controls.component.html
@@ -23,6 +23,7 @@
           <nz-form-label nzRequired> 服务节点 </nz-form-label>
           <nz-form-control nzHasFeedback [nzAutoTips]="tips.schedule_id">
             <nz-select
+              style="width: 320px"
               formControlName="schedule_id"
               nzAllowClear
               nzPlaceHolder="请选择服务节点"
