--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -21,6 +21,10 @@
           <span nz-icon nzType="experiment" nzTheme="outline"></span>
           <span>文章</span>
         </li>
+        <li nz-menu-item nzMatchRouter routerLink="code-editor">
+          <span nz-icon nzType="experiment" nzTheme="outline"></span>
+          <span>代码编辑器</span>
+        </li>
       </ul>
     </nz-sider>
     <nz-layout style="overflow: hidden auto">
