--- a/src/app/audit/logined/logined.component.html
+++ b/src/app/audit/logined/logined.component.html
@@ -75,20 +75,15 @@
   </wpx-toolbox>
 </ng-template>
 <ng-template #extraRef>
-  <nz-space>
-    <ng-container *ngIf="model.selection.size as size">
-      <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
-      <nz-dropdown-menu #menu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item (click)="wpxTable.clearSelections()"> 取消选择 </li>
-        </ul>
-        <ul nz-menu>
-          <li nz-menu-item> 导出 </li>
-        </ul>
-      </nz-dropdown-menu>
-    </ng-container>
-    <button *nzSpaceItem nz-button> 全部导出 </button>
-  </nz-space>
+  <ng-container *ngIf="model.selection.size as size">
+    <button nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
+    <nz-dropdown-menu #menu="nzDropdownMenu">
+      <ul nz-menu>
+        <li nz-menu-item (click)="wpxTable.clearSelections()"> 取消选择 </li>
+        <li nz-menu-item> 导出 </li>
+      </ul>
+    </nz-dropdown-menu>
+  </ng-container>
 </ng-template>
 
 <wpx-table
