--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,5 @@
 @import '~node_modules/ng-zorro-antd/ng-zorro-antd.less';
+@import '~node_modules/ng-zorro-antd/ng-zorro-antd.aliyun.less';
 @import '~node_modules/ng-zorro-antd/resizable/style/entry.less';
 @import '~node_modules/ng-zorro-antd/code-editor/style/entry.less';
 @import 'https://cdn.jsdelivr.net/npm/cropperjs@1.6.0/dist/cropper.min.css';
