refactor: The wpxTable will remove the virtual scroll feature, because virtual scroll is more suitable for large data custom pages, repair the used files

--- a/src/app/admin/imessages/detail/detail.component.html
+++ b/src/app/admin/imessages/detail/detail.component.html
@@ -25,7 +25,7 @@
 
   <nz-content style="overflow: hidden auto">
     <nz-card>
-      <nz-table nzSize="middle" nzTemplateMode>
+      <nz-table nzTemplateMode>
         <thead>
           <tr>
             <th nzLeft nzWidth="200px"><b>项目名称</b></th>
