--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -85,9 +85,7 @@
       format: 'date'
     }
   ]"
-  [wpxItemSize]="50"
-  [wpxOffset]="310"
-  [wpxActions]="actions"
+  [wpxAction]="action"
   (wpxChange)="getData()"
 >
   <ng-template #username let-data>
@@ -109,13 +107,14 @@
   </ng-template>
 </wpx-table>
 
-<nz-dropdown-menu #actions="nzDropdownMenu">
-  <ul *ngIf="wpxTable.actived as v" nz-menu>
-    <li nz-menu-item nzDisabled>
-      <b>电子邮件 [{{ v.email }}]</b>
-    </li>
-    <li nz-menu-divider></li>
-    <li nz-menu-item (click)="open(v)"> 修改 </li>
-    <li nz-menu-item nzDanger (click)="delete(v)"> 删除 </li>
-  </ul>
-</nz-dropdown-menu>
+<ng-template #action let-data>
+  <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="menu">
+    <span nz-icon nzType="ellipsis" nzTheme="outline"></span>
+  </button>
+  <nz-dropdown-menu #menu="nzDropdownMenu">
+    <ul nz-menu>
+      <li nz-menu-item (click)="open(data)"> 修改 </li>
+      <li nz-menu-item nzDanger (click)="delete(data)"> 删除 </li>
+    </ul>
+  </nz-dropdown-menu>
+</ng-template>
